[package]
name = "sudoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
itertools = "0.11.0"
thiserror = "1.0.49"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }

[dev-dependencies]
rstest = "0.18.2"
pretty_assertions = "1.4.0"
